<resources>
    <string name="app_name">POS</string>
    <string name="dragon_roll">Dragon Roll</string>
    <string name="jumbo_roll">Jumbo Roll</string>
    <string name="diamond_roll">Diamond Roll</string>
    <string name="black_dragon_roll">Black Dragon Roll</string>
    <string name="unagi_roll">Unagi Roll</string>
    <string name="california_roll">California Roll</string>
    <string name="shrimp_tempura_roll">Shrimp Tempura Roll</string>
    <string name="crunchy_roll">Crunchy Roll</string>
    <string name="tuna_roll">Tuna Roll</string>
    <string name="spicy_salmon_roll">Spicy Salmon Roll</string>

    <string name="emp_button"> Employee Login </string>
    <string name="cust_button"> Customer Login </string>

    <string name="emp_page_title"> Our Items: </string>
    <string name="edit_item">Edit Item:</string>
    <string name="name_of_item">Name of Item:</string>
    <string name="price_of_item">Price of Item:</string>
    <string name="remove">Remove</string>
    <string name="save">Save</string>

    <string name="cart_title">Your Cart:</string>
    <string name="subtotal_view">Subtotal: %s
        \nTax:  %s</string>
    <string name="pay">Pay %s</string>
    <string name="button">Button</string>
    <string name="add_items">+</string>
    <string name="menu"> Menu  </string>
    <string name="order">Order</string>
    <string name="total_paid">TOTAL PAID</string>
    <string name="change_due">CHANGE DUE</string>
    <string name="total"> Total</string>
    <string name="email">Email</string>
    <string name="new_order">Start a New Order</string>
    <string name="send_receipt">Send Receipt</string>
</resources>